
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_blockSummaryObject {
	uint32                       id                  =      1;
    prototype.sha256             block_id            =      2;
      
}


message so_unique_blockSummaryObject_by_id {
	uint32                    	id              = 1;
}
